src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Closing Documents</fullName>
        <description>Support process with the status values used during Closing Documents stage</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Invalid</fullName>
        </values>
        <values>
            <fullName>Pending Borrower%27s Verification</fullName>
        </values>
        <values>
            <fullName>Pending Case Manager Review</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Requested</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
        <values>
            <fullName>Valid</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Commitment Documents</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Invalid</fullName>
        </values>
        <values>
            <fullName>Pending Borrower%27s Verification</fullName>
        </values>
        <values>
            <fullName>Pending Case Manager Review</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Requested</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
        <values>
            <fullName>Valid</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Disbursement Issues</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Document Request</fullName>
        <description>Case for requested documents from disaster survivors</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Invalid</fullName>
        </values>
        <values>
            <fullName>Reassign</fullName>
        </values>
        <values>
            <fullName>Requested</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
        <values>
            <fullName>Valid</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates a case record to an Application</description>
        <inlineHelpText>Application related to this Case record</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Loan Assistance Team</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assigned out of the queue.</description>
        <label>Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deadline_to_Submit_Documents__c</fullName>
        <label>Deadline to Submit Document</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates the Case record to a Loan</description>
        <inlineHelpText>Associated this Case record to the relevant Loan</inlineHelpText>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logged_In_User__c</fullName>
        <formula>Assigned_To__r.Id == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Docs_Pending_Borrower_Verifcation__c</fullName>
        <description>Roll up summary counts the total number of check list items under the Pending Borrower&apos;s Verification status</description>
        <label>No of Docs Pending Borrower Verification</label>
        <summaryFilterItems>
            <field>Checklist_Item__c.Checklist_Item_Status__c</field>
            <operation>equals</operation>
            <value>Pending Borrower&apos;s Verification</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Documents_Approved__c</fullName>
        <description>Field summarizes the total number of check list items that have been Approved, i.e., Checklist Item Status = Approved</description>
        <label>No. of Documents Accepted</label>
        <summaryFilterItems>
            <field>Checklist_Item__c.Checklist_Item_Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Documents_Pending__c</fullName>
        <label>No. of Documents Pending</label>
        <summaryFilterItems>
            <field>Checklist_Item__c.Checklist_Item_Status__c</field>
            <operation>notEqual</operation>
            <value>Valid</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Checklist_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Application Processing Documents, Closing Documents</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Documents_Requested__c</fullName>
        <label>No. of Documents Requested</label>
        <summaryFilterItems>
            <field>Checklist_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Application Processing Documents, Closing Documents</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Documents_in_Review__c</fullName>
        <description>Field summarizes the total number of Checklist Items with a sub-status = Pending Case Manager Review</description>
        <label>No. of Documents in Review</label>
        <summaryFilterItems>
            <field>Checklist_Item__c.Checklist_Item_Status__c</field>
            <operation>equals</operation>
            <value>Pending Case Manager Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Invalid_Documents__c</fullName>
        <description>Field summarizes the total number of checklist items that have the Status = Invalid</description>
        <inlineHelpText>Total number of documents that are invalid</inlineHelpText>
        <label>No. of Invalid Documents</label>
        <summaryFilterItems>
            <field>Checklist_Item__c.Checklist_Item_Status__c</field>
            <operation>equals</operation>
            <value>Invalid</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Valid_Documents__c</fullName>
        <description>Field summarizes the total number of Checklist Line Items that are under status = Valid</description>
        <label>No. of Valid Documents</label>
        <summaryFilterItems>
            <field>Checklist_Item__c.Checklist_Item_Status__c</field>
            <operation>equals</operation>
            <value>Valid</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Checklist_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Application Processing Documents, Closing Documents</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Documents_Requested__c</fullName>
        <label>Number of Documents Requested</label>
        <summaryForeignKey>Document_Line_Items__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Remaining_Documents_to_Receive__c</fullName>
        <description>Number of documents associated that are not confirmed</description>
        <label>Remaining Documents to Receive</label>
        <summaryFilterItems>
            <field>Document_Line_Items__c.Document_Status__c</field>
            <operation>notEqual</operation>
            <value>Valid</value>
        </summaryFilterItems>
        <summaryForeignKey>Document_Line_Items__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_Assigned_to_LAT_Member__c</fullName>
        <label>Time - Assigned to LAT Member</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Assigned_to_Queue__c</fullName>
        <label>Time - Assigned to Queue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Update_Record_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Record Type</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Document_Reviewer_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Document Reviewer Queue</label>
        <queue>Document_Reviewer_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Document_Verification_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Document Verification Queue</label>
        <queue>Document_Verification_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Loan_Assistance_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Document Gatherer</label>
        <queue>Loan_Assistance_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Requests_Assigned_to_me</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Requests Assigned to me</label>
    </listViews>
    <listViews>
        <fullName>Senior_Case_Manager_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Legal Manager Queue</label>
        <queue>Senior_Case_Manager_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Closing_Document</fullName>
        <active>true</active>
        <businessProcess>Closing Documents</businessProcess>
        <description>Record type applies only for Closing Documents cases</description>
        <label>Closing Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commitment_Request</fullName>
        <active>true</active>
        <businessProcess>Commitment Documents</businessProcess>
        <description>Request to manage Commitment Checklist</description>
        <label>Commitment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disbursement_Issues</fullName>
        <active>true</active>
        <businessProcess>Disbursement Issues</businessProcess>
        <label>Disbursement Issues</label>
    </recordTypes>
    <recordTypes>
        <fullName>Document_Request</fullName>
        <active>true</active>
        <businessProcess>Document Request</businessProcess>
        <description>Record type applies only for Document Gathering cases</description>
        <label>Document Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>System_Generated</fullName>
        <active>true</active>
        <businessProcess>Closing Documents</businessProcess>
        <description>To maintain and track System Generated Checklist</description>
        <label>System Generated</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Restrict_LAT_member_to_change_the_Owner</fullName>
        <active>true</active>
        <errorConditionFormula>$UserRole.Name=&apos;Loan Assistance Team&apos;
&amp;&amp; ( ISCHANGED( OwnerId ) ||  ISCHANGED( Assigned_To__c ))</errorConditionFormula>
        <errorMessage>You do not have permissions to change the Ownership or Assigned To fields</errorMessage>
    </validationRules>
</CustomObject>